--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <p class="popup-message">Clique no botão abaixo para sacar suas recompensas</p>
         </div>
         <div class="popup-footer">
-            <a href="https://comeceagoraa.github.io/saque/" id="utmDynamicLink" class="popup-btn">Sacar meu dinheiro</a>
+            <a href="https://entreagoraa.github.io/saque/" id="utmDynamicLink" class="popup-btn">Sacar meu dinheiro</a>
         </div>
     </div>
 </div>
