--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
                 <span class="popup-currency">R$</span><span id="counter" class="popup-counter">0.00</span>
             </div>
             <p class="popup-message">Clique no botão abaixo para sacar suas recompensas</p>
-        </div>
-        <div class="popup-footer">
-            <a href="https://entreagoraa.github.io/saque/" id="utmDynamicLink" class="popup-btn">Sacar meu dinheiro</a>
-        </div>
+    </div>
+<div class="popup-footer">
+    <a href="/saque/" id="utmDynamicLink" class="popup-btn">Sacar meu dinheiro</a>
+    </div>
     </div>
 </div>
 
